Removes constant for Google Spaces app

This is part of the revert of https://chromereviews.googleplex.com/426447013/

This CL depends on https://chromereviews.googleplex.com/578437015 and
should not be submitted until it has been submitted.

BUG=708607
TEST=Go to Settings and check that Google Spaces is no longer listed.

Review-Url: https://codereview.chromium.org/2809853002
Cr-Commit-Position: refs/heads/master@{#463587}

Former-commit-id: a18f1349f3a93817a44f6a5cdca13aca485a2df7