ios/chrome/browser/native_app_launcher/ios_appstore_ids.mm
@@ -13,6 +13,5 @@ const char kIOSAppStoreGooglePlayMusic[] = "691797987";
 const char kIOSAppStoreGooglePlus[] = "447119634";
 const char kIOSAppStoreGoogleSheets[] = "842849113";
 const char kIOSAppStoreGoogleSlides[] = "879478102";
-const char kIOSAppStoreSpaces[] = "1025159334";
 const char kIOSAppStoreTestFlight[] = "899247664";
 const char kIOSAppStoreYouTube[] = "544007664";
